--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-howler": "^5.2.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
