finish config for Report heapmap

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
